syntax = "proto3";

package tokens.messages.v1;

import "buf/validate/validate.proto";

option go_package = "messages/v1";

message RefreshAuthenticationTokenResponse {
  string token = 1 [(buf.validate.field).required = true];
}
